manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: steve2312
spec:
  replicas: 2
  selector:
    matchLabels:
      service: website
  template:
    metadata:
      labels:
        service: website
    spec:
      containers:
        - name: steve2312-website
          image: steve2312/steve2312.net:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 60m
              memory: 256Mi
            requests:
              cpu: 30m
              memory: 128Mi
          ports:
            - containerPort: 80
