manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: steve2312
spec:
  selector:
    service: website
  ports:
    - port: 80
      targetPort: 80
