manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-issuer'
  name: website-ingress
  namespace: steve2312
spec:
  ingressClassName: nginx
  rules:
    - host: steve2312.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website-service
                port:
                  number: 80
  tls:
    - hosts:
        - 'steve2312.net'
      secretName: 'website-ingress-tls-secret'
